--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,32 @@
 .App {
   text-align: center;
+  background-color: #ddeedd;
+  height: 100vh;
+  width: 100%;
 }
 
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  text-transform: uppercase;
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(19, 19, 19);
+  background-color: #b0aac0;
   color: white;
-  padding: 10px;
+  padding: 20px;
+  margin-right: 10px;
+  width: 100%;
+}
+
+.navbar-title {
+  display: flex;
+  margin-left: 10px;
+  align-items: center;
 }
 
 .navbar-links {
@@ -23,7 +35,10 @@ body {
 }
 
 .navbar-links span {
-  margin: 0px;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  margin-right: 20px;
   padding: 0px;
   display: flex;
   align-items: center;
