--- a/client/src/pages/auth/styles.css
+++ b/client/src/pages/auth/styles.css
@@ -3,7 +3,9 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f2f2f2;
+  width: 100%;
+  background-color: #ddeedd;
+  /* text-align: center; */
 }
 
 .auth-container {
@@ -16,7 +18,7 @@
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   margin: 20px;
-  width: 400px;
+  width: 100%;
 }
 
 .form-group {
