--- a/client/src/pages/shop/styles.css
+++ b/client/src/pages/shop/styles.css
@@ -9,18 +9,21 @@
 
 .product {
   border-radius: 15px;
-  width: 300px;
+  width: 100%;
+  max-width: 100%;
   height: 300px;
-  margin: 100px;
-  margin-top: 200px;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  text-align: center;
 }
 
 .product img {
-  width: 300px;
+  width: 100%;
+  height: auto;
+  border-radius: 15px;
 }
 
 .product .description {
@@ -46,4 +49,11 @@
   background-color: rgb(19, 19, 19);
   color: white;
   cursor: pointer;
+}
+
+.shop-image {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
