--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,9 @@
 .App {
   text-align: center;
   background-color: #ddeedd;
-  height: 100vh;
-  width: 100%;
+  min-height: 100vh;
+  min-width: 100vh;
+  box-sizing: border-box;
 }
 
 body {
@@ -10,6 +11,7 @@ body {
   padding: 0;
   font-family: sans-serif;
   text-transform: uppercase;
+  overflow-x: hidden;
 }
 
 .navbar {
@@ -19,7 +21,6 @@ body {
   background-color: #b0aac0;
   color: white;
   padding: 20px;
-  margin-right: 10px;
   width: 100%;
 }
 
