--- a/client/src/pages/shop/styles.css
+++ b/client/src/pages/shop/styles.css
@@ -1,3 +1,68 @@
+.shop {
+  position: relative;
+  margin: 0 auto; /* Center the section horizontally */
+}
+
+.welcome-banner {
+  background-image: url("https://www.naturemade.com/cdn/shop/articles/healthy-foods-to-eat_960x.jpg?v=1611988563");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  color: white;
+  text-align: center;
+  padding: 100px 0; /* Adjust the padding as needed */
+}
+
+.translucent-container {
+  width: 100%;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+}
+
+.welcome-text {
+  color: #000;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.welcome-text h1 {
+  font-size: 3em;
+  margin-bottom: 20px;
+  padding-top: 20px;
+}
+
+.welcome-text p {
+  font-size: 1.2em;
+  margin-bottom: 30px;
+  padding-bottom: 20px;
+}
+
+.explore-button {
+  display: inline-block;
+  padding: 15px 30px;
+  font-size: 1.2em;
+  text-decoration: none;
+  background-color: #4caf50; /* Green color, you can change it */
+  color: white;
+  border-radius: 5px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.explore-button:hover {
+  background-color: #45a049; /* Darker shade on hover, you can change it */
+}
+
+.menu-title {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.menu-title h2 {
+  font-size: 2em;
+  color: black;
+}
+
 .products {
   margin-top: 100px;
   width: 100%;
@@ -49,11 +114,4 @@
   background-color: rgb(19, 19, 19);
   color: white;
   cursor: pointer;
-}
-
-.shop-image {
-  width: 100%;
-  max-width: 100%;
-  height: auto;
-  display: block;
 }
