--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-color: #ddeedd;
+  /* background-color: #fff; */
   min-height: 100vh;
   min-width: 100vh;
   box-sizing: border-box;
@@ -9,7 +10,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: brandon-grotesque, sans-serif;
   text-transform: uppercase;
   overflow-x: hidden;
 }
