--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: #ddeedd;
-  /* background-color: #fff; */
+  /* background-color:  #e4d1d1; */
   min-height: 100vh;
   min-width: 100vh;
   box-sizing: border-box;
@@ -10,7 +10,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: brandon-grotesque, sans-serif;
+  font-family: sans-serif;
   text-transform: uppercase;
   overflow-x: hidden;
 }
@@ -19,8 +19,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #b0aac0;
-  color: white;
+  /* background-color:  #b0aac0; */
+  /* background-color: #e4d1d1; */
+  background-color: #fff;
+  color: #b0aac0;
   padding: 20px;
   width: 100%;
 }
@@ -37,7 +39,7 @@ body {
 }
 
 .navbar-links span {
-  color: white;
+  color: #b0aac0;
   text-decoration: none;
   font-size: 20px;
   margin-right: 20px;
@@ -47,7 +49,7 @@ body {
 }
 
 .navbar a {
-  color: white;
+  color: #b0aac0;
   text-decoration: none;
   font-size: 20px;
   margin-right: 20px;
