--- a/client/src/pages/checkout/styles.css
+++ b/client/src/pages/checkout/styles.css
@@ -5,12 +5,19 @@
   align-items: center;
 }
 
+.cart h1 {
+  text-align: center;
+  margin-top: 50px;
+  font-size: 2em;
+  color: black;
+}
+
 .cart-item {
   width: 700px;
   height: 250px;
   display: flex;
-
   align-items: center;
+  background-color: #fff;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   border-radius: 25px;
   margin: 30px;
@@ -18,7 +25,8 @@
 
 .cart-item img {
   width: 200px;
-  margin-left: 50px;
+  margin-left: 0px;
+  border-radius: 25px;
 }
 
 .cart-item .description {
@@ -32,13 +40,26 @@
   font-weight: bolder;
 }
 
+.count-handler button {
+  width: 30px;
+  height: 30px;
+  font-size: 15px;
+  text-align: center;
+}
+
 .checkout button {
   width: 150px;
   height: 50px;
-  background-color: rgb(19, 19, 19);
-  color: white;
-  border: none;
+  background-color: #b0aac0;
+  color: black;
+  border-color: black;
   border-radius: 8px;
   margin: 10px;
+  cursor: pointer;
+}
+
+.checkout button:hover {
+  background-color: rgb(19, 19, 19);
+  color: white;
   cursor: pointer;
 }
