--- a/client/src/pages/shop/styles.css
+++ b/client/src/pages/shop/styles.css
@@ -60,6 +60,7 @@
 
 .menu-title h2 {
   font-size: 2em;
+  text-decoration: underline;
   color: black;
 }
 
@@ -76,18 +77,24 @@
   border-radius: 15px;
   width: 100%;
   max-width: 100%;
-  height: 300px;
-  margin-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   text-align: center;
+  margin: 0;
+  margin-bottom: 50px;
+}
+
+.product .description {
+  text-align: center;
 }
 
 .product img {
-  width: 100%;
-  height: auto;
+  width: 300px;
+  height: 300px;
+  margin-left: 20px;
+  margin-right: 20px;
   border-radius: 15px;
 }
 
