--- a/client/src/pages/checkout/styles.css
+++ b/client/src/pages/checkout/styles.css
@@ -50,10 +50,10 @@
 .checkout button {
   width: 150px;
   height: 50px;
-  background-color: #b0aac0;
+  background-color: #c6bcb6;
   color: black;
   border-color: black;
-  border-radius: 8px;
+  border-radius: 15px;
   margin: 10px;
   cursor: pointer;
 }
