--- a/client/src/pages/shop/styles.css
+++ b/client/src/pages/shop/styles.css
@@ -107,14 +107,14 @@
 }
 
 .add-to-cart-bttn {
-  background-color: transparent;
-  border: 2px solid rgb(19, 19, 19);
-  min-width: 100px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  width: 150px;
+  height: 50px;
+  background-color: #c6bcb6;
+  color: black;
+  border-color: black;
   border-radius: 15px;
+  margin: 10px;
+  cursor: pointer;
 }
 
 .add-to-cart-bttn:hover {
