--- a/client/src/pages/purchased-items/styles.css
+++ b/client/src/pages/purchased-items/styles.css
@@ -1,3 +1,18 @@
+.purchase {
+  position: relative;
+  margin: 0 auto; /* Center the section horizontally */
+}
+
+.purchase-banner {
+  background-image: url("https://www.naturemade.com/cdn/shop/articles/healthy-foods-to-eat_960x.jpg?v=1611988563");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  color: white;
+  text-align: center;
+  padding: 110px 0;
+}
+
 .purchased-items-page h1 {
   text-align: center;
   margin-top: 50px;
