styling and formatting

--- a/client/src/pages/checkout/styles.css
+++ b/client/src/pages/checkout/styles.css
@@ -72,7 +72,7 @@
 .checkout button {
   width: 150px;
   height: 50px;
-  background-color: #c6bcb6;
+  background-color: #d3d3d3;
   color: black;
   border-color: black;
   border-radius: 15px;
