--- a/client/src/pages/shop/styles.css
+++ b/client/src/pages/shop/styles.css
@@ -70,19 +70,18 @@
   height: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
   place-items: center;
 }
 
 .product {
   border-radius: 15px;
   width: 100%;
-  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  margin: 0;
   margin-bottom: 50px;
 }
 
@@ -96,6 +95,7 @@
   margin-left: 20px;
   margin-right: 20px;
   border-radius: 15px;
+  /* object-fit:cover; */
 }
 
 .product .description {
@@ -109,7 +109,7 @@
 .add-to-cart-bttn {
   width: 150px;
   height: 50px;
-  background-color: #c6bcb6;
+  background-color: #d3d3d3;
   color: black;
   border-color: black;
   border-radius: 15px;
