--- a/client/src/pages/auth/styles.css
+++ b/client/src/pages/auth/styles.css
@@ -1,6 +1,6 @@
 .auth {
   position: relative;
-  margin: 0 auto; /* Center the section horizontally */
+  margin: 0 auto;
 }
 
 .auth-banner {
@@ -19,7 +19,7 @@
   align-items: center;
   height: auto;
   width: 100%;
-  background-color: #ddeedd;
+  background-color: #fff;
   /* text-align: center; */
 }
 
@@ -29,7 +29,7 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
-  background-color: white;
+  background-color: #f9f5f1 !important;
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   margin: 50px;
@@ -52,4 +52,21 @@ input {
   padding: 10px;
   font-size: 16px;
   border-radius: 5px;
+}
+
+.auth-container button {
+  width: 110px;
+  height: 40px;
+  background-color: #ddeedd;
+  color: black;
+  border-color: black;
+  border-radius: 15px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.auth-container button:hover {
+  background-color: rgb(19, 19, 19);
+  color: white;
+  cursor: pointer;
 }
